<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/backgroundGrey"
		tools:context=".activities.MainActivity"
		>
	<androidx.fragment.app.FragmentContainerView
			android:id="@+id/fragmentContainerView"
			android:name="androidx.navigation.fragment.NavHostFragment"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			app:defaultNavHost="true"
			app:navGraph="@navigation/navhost"
			/>
	<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:background="@drawable/bottom_navigation_background"
			android:gravity="center"
			android:orientation="horizontal"
			app:layout_constraintBottom_toBottomOf="parent"
			>
		<com.bookit.koriramos.custom_view.CustomRadioGroup
				android:id="@+id/home"
				android:checked="true"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/radio_flat_selector"
				android:button="@android:color/transparent"
				android:drawableStart="@drawable/home"
				android:drawablePadding="4dp"
				android:textStyle="bold"
				android:textColor="@color/radio_selector"
				android:drawableTint="@color/radio_selector"
				android:text="@string/home"
				android:layout_weight="1"
				tools:targetApi="m"
				/>
		
		<com.bookit.koriramos.custom_view.CustomRadioGroup
				android:id="@+id/setting"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/radio_flat_selector"
				android:button="@android:color/transparent"
				android:drawableStart="@drawable/setting"
				android:drawablePadding="4dp"
				android:textStyle="bold"
				android:textColor="@color/radio_selector"
				android:drawableTint="@color/radio_selector"
				android:layout_weight="1"
				android:text="@string/setting"
				/>
		
		<com.bookit.koriramos.custom_view.CustomRadioGroup
				android:id="@+id/search"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/radio_flat_selector"
				android:button="@android:color/transparent"
				android:drawableStart="@drawable/ic_baseline_search_24"
				android:text="@string/search"
				android:drawablePadding="4dp"
				android:textStyle="bold"
				android:textColor="@color/radio_selector"
				android:drawableTint="@color/radio_selector"
				android:layout_weight="1"
				/>
		
		
		<com.bookit.koriramos.custom_view.CustomRadioGroup
				android:id="@+id/account"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/radio_flat_selector"
				android:button="@android:color/transparent"
				android:drawableStart="@drawable/ic_baseline_person_outline_24"
				android:drawablePadding="4dp"
				android:textStyle="bold"
				android:textColor="@color/radio_selector"
				android:drawableTint="@color/radio_selector"
				android:text="@string/account"
				android:layout_weight="1"
				>
		
		</com.bookit.koriramos.custom_view.CustomRadioGroup>
	
	
	</RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>