<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#1924C1"
		>
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#1924C1"
			tools:context=".activities.LoginActivity"
			>
		
		<Button
				android:id="@+id/fireBaseLoginBtn"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginBottom="16dp"
				android:layout_marginEnd="32dp"
				android:layout_marginStart="32dp"
				android:layout_marginTop="16dp"
				android:background="@drawable/button_pressed"
				android:text="Firebase Login"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView11"
				/>
		<EditText
				android:id="@+id/editTextTextPersonName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="32dp"
				android:layout_marginStart="32dp"
				android:layout_marginTop="32dp"
				android:background="@drawable/edit_text_background"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/username"
				android:inputType="textPersonName"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/guideline2"
				tools:ignore="Autofill"
				/>
		
		<EditText
				android:id="@+id/editTextTextPassword"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginEnd="32dp"
				android:layout_marginStart="32dp"
				android:layout_marginTop="24dp"
				android:background="@drawable/edit_text_background"
				android:ems="10"
				android:gravity="center"
				android:hint="@string/password"
				android:inputType="textPassword"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
				tools:ignore="Autofill"
				/>
		<ImageView
				android:id="@+id/imageView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="64dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.498"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@mipmap/ic_launcher_round"
				/>
		<TextView
				android:id="@+id/textView"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:text="@string/forgot_password"
				android:textColor="@color/white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
				/>
		<TextView
				android:id="@+id/textView11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="Or"
				android:textColor="@color/white"
				android:textSize="16sp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/loginBtn"
				/>
		<TextView
				android:id="@+id/textView12"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="24dp"
				android:text="@string/app_name"
				android:textColor="@color/white"
				android:textSize="34sp"
				android:textStyle="bold"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/imageView"
				/>
		<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_percent="0.40"
				/>
		<com.google.android.material.button.MaterialButton
				android:id="@+id/loginBtn"
				android:layout_width="0dp"
				android:layout_height="54dp"
				android:layout_marginEnd="32dp"
				android:layout_marginStart="32dp"
				android:layout_marginTop="8dp"
				android:background="@drawable/button_background"
				android:text="@string/log_in"
				android:textColor="@color/white"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView"
				app:backgroundTint="#191919"
				/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
