<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".fragments.HomeFragment"
		>
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			>
		<include
				layout="@layout/my_carrage_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				/>
		<androidx.constraintlayout.widget.ConstraintLayout
				android:clickable="true"
				android:id="@+id/available"
				android:layout_width="match_parent"
				android:layout_height="80dp"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:layout_marginTop="32dp"
				android:background="@drawable/add_background"
				android:focusable="true"
				>
			
			<ImageView
					android:id="@+id/imageView6"
					android:layout_width="32dp"
					android:layout_height="32dp"
					android:layout_marginEnd="24dp"
					android:background="@drawable/white_background"
					android:padding="4dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
					/>
			<TextView
					android:id="@+id/textView8"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:text="@string/long_term_short_term"
					android:textColor="#9F6BF4"
					android:textSize="12sp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/textView7"
					/>
			<TextView
					android:id="@+id/textView7"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginTop="16dp"
					android:text="@string/availabe_cars"
					android:textColor="#DBD9DE"
					android:textSize="16sp"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					/>
		</androidx.constraintlayout.widget.ConstraintLayout>
		<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				>
			
			<TextView
					android:id="@+id/textView4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="24dp"
					android:layout_marginTop="24dp"
					android:text="@string/top_deals"
					android:textColor="#BEBEBE"
					android:textStyle="bold"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					/>
			<TextView
					android:id="@+id/textView6"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="16dp"
					android:text="@string/more"
					android:textColor="@color/purple"
					android:textSize="12sp"
					app:layout_constraintBottom_toBottomOf="@+id/textView4"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="@+id/textView4"
					app:drawableRightCompat="@drawable/ic_baseline_arrow_forward_ios_24"
					/>
			<androidx.recyclerview.widget.RecyclerView
					android:id="@+id/topDealsRecyclerView"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginTop="16dp"
					android:orientation="horizontal"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/textView4"
					/>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</LinearLayout>
</FrameLayout>